Sync meta and fix potential memory leak